Add CSI Connection Fix bug on validateProject function and ConfigActualDeviceView for the case of VIRTUAL device Implement autoAssignDevice